--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-If you happen to stumble upon this code, cool! This is in early development and hardly works yet :), I'm using this project to have a go with some of the HTML5 apis and more structured JS.
+If you happen to stumble upon this code, cool! This is in early development and may or may not be in a decent working state.
